# fluss-datafusion

./: Cargo.toml  README.md
src/: catalog.rs  cli.rs  cli_display.rs  error.rs  main.rs  provider.rs
src/catalog/: mod.rs  schema.rs
src/provider/: insert_exec.rs  lookup_exec.rs  scan_exec.rs
src/sql/: dialect.rs  mod.rs  rewriter.rs  show.rs
