[package]
name = "fluss-datafusion"
version = "0.1.0"
edition = "2021"

[dependencies]
fluss = { package = "fluss-rs", git = "https://github.com/zuston/fluss-rust.git", branch = "cursor/iceberg-kv-key-encoding-kv-format-version" }
datafusion = "52.1.0"
arrow = { version = "57", features = ["prettyprint", "json"] }
arrow-schema = "57"
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
rustyline = "15"
clap = { version = "4", features = ["derive"] }
log = "0.4"
logforth = "0.26.2"
anyhow = "1"
nu-ansi-term = "0.50"
